# pwr-zmt

./: .gitignore  CMakeLists.txt  czytaj.to  run.sh  test.txt  test_all.txt  test_arms.txt  test_concurrent.txt  test_move.txt  test_parallel.txt  test_quick.txt  test_rotate.txt
config/: addresses_validator.txt  config.xml
inc/: AbstractComChannel.hh  AbstractMobileObj.hh  ComChannel.hh  CommandParser.hh  CommandRegistry.hh  Configuration.hh  LibInterface.hh  MobileObj.hh  ProgramInterpreter.hh  Scene.hh  Vector3D.hh  XMLReader.hh  klient.hpp  preprocessor.hh  xmlinterp.hh
plugin/: CMakeLists.txt
plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
serwer/: CZYTAJ.TO
serwer/serwer_zrodla/: CMakeLists.txt
serwer/serwer_zrodla/inc/: gsv-AppParams.hh  gsv-BackgroundUtils.hh  gsv-GeomParams.hh  gsv-ServerCommand.hh  gsv-Vector3f.hh  gsv-WgViewer3D.hh
serwer/serwer_zrodla/src/: gsv-BackgroundUtils.cpp  gsv-CommandInterpreter.cpp  gsv-Cuboid.cpp  gsv-GeomParams.cpp  gsv-Map4DescGeomObjs.cpp  gsv-ServerCommand.cpp  gsv-WgViewer3D.cpp  main.cpp
src/: AbstractComChannel.cpp  CommandParser.cpp  CommandRegistry.cpp  Configuration.cpp  LibInterface.cpp  ProgramInterpreter.cpp  XMLReader.cpp  klient.cpp  main.cpp  preprocessor.cpp  xmlinterp.cpp
